# c-cmake-sdl2-template

./: README.md
src/: CMakeLists.txt  mytarget.c
src/sdl_adapter/: CMakeLists.txt  sdl_adapter.c  sdl_adapter.h
